--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,6 +34,7 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.8
+  dio: ^5.7.0
 
 dev_dependencies:
   flutter_test:
@@ -61,7 +62,7 @@ flutter:
     - asset/img/food/
     - asset/img/logo/
     - asset/img/misc/
-    - asset/rive
+    - asset/rive/
     - asset/svg/icon/
 
   # To add assets to your application, add an assets section, like this:
